Remove some deprecations.