@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,7 +43,7 @@ public abstract class RParserFactory {
     static {
         final String prop = System.getProperty("fastr.parser.factory.class", "com.oracle.truffle.r.parser.DefaultRParserFactory");
         try {
-            theInstance = (RParserFactory) Class.forName(prop).newInstance();
+            theInstance = (RParserFactory) Class.forName(prop).getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             // CheckStyle: stop system..print check
             System.err.println("Failed to instantiate class: " + prop);
