@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -71,7 +71,7 @@ public abstract class RFFIFactory {
         }
         String klassName = getFactoryType().klassName;
         try {
-            rffiFactory = (RFFIFactory) Class.forName(klassName).newInstance();
+            rffiFactory = (RFFIFactory) Class.forName(klassName).getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw RSuicide.rSuicide("Failed to instantiate class: " + klassName + ": " + ex);
         }
